<resources>
    <string name="app_name">Calendar</string>
    <string name="sign_in">Sign In Using Google</string>
    <string name="confirmed_events">Confirmed Events</string>
    <string name="pending_events">Pending Events</string>
    <string name="event_name">EVENT NAME</string>
    <string name="add_event">Add Event</string>
    <string name="logout">Logout</string>
    <string name="user_name">USer name</string>
    <string name="users_invite">Select the users to invite to this event</string>
    <string name="save_event">Save Event</string>
    <string name="date_and_time">Date and Time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="not_going">Not Going</string>
    <string name="going">Going</string>
    <string name="maybe_going">Maybe Going</string>
    <string name="other_s_responses">Other\'s Responses</string>
    <string name="othersinfo">othersInfo</string>
    <string name="timeinfo">timeInfo</string>
    <string name="owner">Owner</string>
    <string name="eventtitle">eventTitle</string>
    <string name="eventdescription">eventDescription</string>
    <string name="your_response">Your Response</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="owner_email">Owner Email</string>
    <string name="dateinfo">dateInfo</string>
</resources>
